examples/test/testpolicy6434.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6434
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key29: value47
      key23: value16
      key30: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value7
          key47: value20
      podSelector:
        matchLabels:
          key45: value13
          key5: value30
